--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "expo": "^49.0.0",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
+    "firebase": "^9.15.0",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.72.1",
+    "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
