--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^9.15.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
